[gd_scene load_steps=16 format=3 uid="uid://cawaitomgd6jf"]

[ext_resource type="Texture2D" uid="uid://dje20jrbhf2t3" path="res://Assets/Stages/04/Bullet4.png" id="1_78q0x"]
[ext_resource type="Texture2D" uid="uid://r7pmgpd3qawl" path="res://Assets/Stages/04/Boss/Boss4.png" id="1_nl1jq"]
[ext_resource type="Script" path="res://Scenes/Stages/Stage4/Boss/boss_4.gd" id="1_ul2qy"]
[ext_resource type="PackedScene" uid="uid://qygaml1iyu58" path="res://Scenes/Stages/Stage4/Boss/boss_4_bullet.tscn" id="2_ipbuv"]
[ext_resource type="PackedScene" uid="uid://csyg3wklbkhk0" path="res://Scenes/Stages/Stage4/Boss/boss_4_fragment.tscn" id="3_ekeng"]
[ext_resource type="Texture2D" uid="uid://bdvy24x1x5my" path="res://Assets/Stages/04/Eyeball4.png" id="4_1y5n7"]

[sub_resource type="Gradient" id="Gradient_nr5mf"]
offsets = PackedFloat32Array(0, 0.423963, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_pn04s"]
radius = 76.0263

[sub_resource type="Animation" id="Animation_lcref"]
resource_name = "BounceBoss"
length = 1.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder/BossSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(-4, -1), Vector2(-4, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteHolder/BossSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.28, 0.3), Vector2(0.32, 0.26)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(-4, -1), Vector2(-4, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.28, 0.3), Vector2(0.32, 0.26)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2rm0c"]
_data = {
"BounceBoss": SubResource("Animation_lcref")
}

[sub_resource type="Animation" id="Animation_5v3gw"]
resource_name = "ShakeBoss"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-8, 0), Vector2(8, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(3, -3), Vector2(-5, -3), Vector2(11, -3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r4rb0"]
_data = {
"ShakeBoss": SubResource("Animation_5v3gw")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_i1mt0"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_xyg1a"]
offsets = PackedFloat32Array(0, 0.525346, 0.760369, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_kjlre"]
radius = 267.878

[node name="Boss4" type="StaticBody2D" groups=["Boss"]]
collision_layer = 33
collision_mask = 33
script = ExtResource("1_ul2qy")
bullet = ExtResource("2_ipbuv")
fragment = ExtResource("3_ekeng")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 128
lifetime = 0.3
texture = ExtResource("1_78q0x")
direction = Vector2(0, -1)
spread = 140.0
gravity = Vector2(0, 0)
initial_velocity_min = 600.0
initial_velocity_max = 800.0
angular_velocity_min = -300.0
angular_velocity_max = 300.0
orbit_velocity_min = -0.5
orbit_velocity_max = 0.5
angle_max = 360.0
scale_amount_min = 0.1
scale_amount_max = 0.2
color = Color(1, 1, 1, 0.501961)
color_ramp = SubResource("Gradient_nr5mf")

[node name="SpriteHolder" type="Node2D" parent="."]

[node name="BossSprite" type="Sprite2D" parent="SpriteHolder"]
position = Vector2(-4, -1)
scale = Vector2(0.28, 0.3)
texture = ExtResource("1_nl1jq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_pn04s")

[node name="Bouncer" type="AnimationPlayer" parent="."]
autoplay = "BounceBoss"
libraries = {
"": SubResource("AnimationLibrary_2rm0c")
}

[node name="Shaker" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r4rb0")
}

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="DeleteTimer" type="Timer" parent="."]
one_shot = true

[node name="ShatteredParticles" type="CPUParticles2D" parent="."]
z_index = 1
material = SubResource("CanvasItemMaterial_i1mt0")
emitting = false
amount = 75
lifetime = 0.3
one_shot = true
explosiveness = 0.5
texture = ExtResource("4_1y5n7")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 600.0
initial_velocity_max = 650.0
angle_max = 360.0
scale_amount_min = 0.1
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_xyg1a")
anim_offset_max = 1.0

[node name="Hitbox" type="Area2D" parent="." groups=["BossHitbox"]]
visible = false
position = Vector2(3, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-4, -1)
scale = Vector2(0.28, 0.3)
shape = SubResource("CircleShape2D_kjlre")

[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
